--- a/src/test/resources/test-application.properties
+++ b/src/test/resources/test-application.properties
@@ -15,5 +15,4 @@ spring.datasource.initialize=true
 spring.datasource.schema=classpath:/schema.sql
 spring.datasource.continue-on-error=true
 
-# Documentação SpringDoc
-sprindoc.swagger-ui.path=/swagger-ui.html
+spring.flyway.enable=false
